[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fonts/Ubuntu-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Account.gd" type="Script" id=2]
[ext_resource path="res://Themes/button_normal.tres" type="StyleBox" id=3]
[ext_resource path="res://Themes/button_pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://Fonts/button_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://Fonts/lineedit_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://Fonts/label_font.tres" type="DynamicFont" id=7]

[sub_resource type="DynamicFont" id=1]
size = 85
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 90
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_right = 10.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=4]
size = 60
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0.227451, 0.0745098, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0.976471, 0.0470588, 1 )
border_blend = true
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
corner_detail = 10
shadow_color = Color( 0, 0.423529, 0.0196078, 1 )
shadow_size = 7
shadow_offset = Vector2( 0, 4 )

[sub_resource type="DynamicFont" id=6]
size = 70
use_filter = true
font_data = ExtResource( 1 )

[node name="Account" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="account_label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 100.0
margin_right = 5.0
margin_bottom = 218.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.784314, 0.341176, 1 )
text = "Traveller account"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tween" type="Tween" parent="."]

[node name="account_buttons_container" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -310.0
margin_top = -170.0
margin_right = 310.0
margin_bottom = 170.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acc_register_button" type="Button" parent="account_buttons_container"]
margin_left = 143.0
margin_right = 477.0
margin_bottom = 111.0
focus_mode = 0
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Register"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo_label" type="Label" parent="account_buttons_container"]
margin_top = 119.0
margin_right = 620.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.784314, 0.341176, 1 )
text = "or"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acc_login_button" type="Button" parent="account_buttons_container"]
margin_left = 196.0
margin_top = 229.0
margin_right = 423.0
margin_bottom = 340.0
focus_mode = 0
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="register_container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -340.0
margin_top = -291.0
margin_right = 340.0
margin_bottom = 291.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="register_error_label" type="Label" parent="register_container"]
margin_right = 680.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1
autowrap = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="register_username_container" type="HBoxContainer" parent="register_container"]
margin_top = 101.0
margin_right = 680.0
margin_bottom = 178.0

[node name="register_username_label" type="Label" parent="register_container/register_username_container"]
margin_top = 4.0
margin_right = 306.0
margin_bottom = 72.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0.784314, 0.341176, 1 )
text = "Username:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="register_username" type="LineEdit" parent="register_container/register_username_container"]
margin_left = 314.0
margin_right = 680.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 6 )
custom_colors/selection_color = Color( 0, 0.423529, 0.0196078, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
max_length = 20
context_menu_enabled = false

[node name="register_email_container" type="HBoxContainer" parent="register_container"]
margin_top = 228.0
margin_right = 680.0
margin_bottom = 305.0

[node name="register_email_label" type="Label" parent="register_container/register_email_container"]
margin_top = 4.0
margin_right = 180.0
margin_bottom = 72.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0.784314, 0.341176, 1 )
text = "Email:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="register_email" type="LineEdit" parent="register_container/register_email_container"]
margin_left = 188.0
margin_right = 680.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 6 )
custom_colors/selection_color = Color( 0, 0.423529, 0.0196078, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
max_length = 60
context_menu_enabled = false

[node name="register_password_container" type="HBoxContainer" parent="register_container"]
margin_top = 355.0
margin_right = 680.0
margin_bottom = 432.0

[node name="register_password_label" type="Label" parent="register_container/register_password_container"]
margin_top = 4.0
margin_right = 292.0
margin_bottom = 72.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0.784314, 0.341176, 1 )
text = "Password:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="register_password" type="LineEdit" parent="register_container/register_password_container"]
margin_left = 300.0
margin_right = 680.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 6 )
custom_colors/selection_color = Color( 0, 0.423529, 0.0196078, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
max_length = 50
secret = true
context_menu_enabled = false

[node name="register_button" type="Button" parent="register_container"]
margin_left = 84.0
margin_top = 482.0
margin_right = 595.0
margin_bottom = 582.0
focus_mode = 0
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Create account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="login_container" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -340.0
margin_top = -227.5
margin_right = 340.0
margin_bottom = 227.5
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="login_error_label" type="Label" parent="login_container"]
margin_right = 680.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1
autowrap = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="login_email_container" type="HBoxContainer" parent="login_container"]
margin_top = 101.0
margin_right = 680.0
margin_bottom = 178.0

[node name="login_email_label" type="Label" parent="login_container/login_email_container"]
margin_top = 4.0
margin_right = 180.0
margin_bottom = 72.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0.784314, 0.341176, 1 )
text = "Email:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="login_email" type="LineEdit" parent="login_container/login_email_container"]
margin_left = 188.0
margin_right = 680.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 6 )
custom_colors/selection_color = Color( 0, 0.423529, 0.0196078, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
max_length = 60
context_menu_enabled = false

[node name="login_password_container" type="HBoxContainer" parent="login_container"]
margin_top = 228.0
margin_right = 680.0
margin_bottom = 305.0

[node name="login_password_label" type="Label" parent="login_container/login_password_container"]
margin_top = 4.0
margin_right = 292.0
margin_bottom = 72.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0.784314, 0.341176, 1 )
text = "Password:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="login_password" type="LineEdit" parent="login_container/login_password_container"]
margin_left = 300.0
margin_right = 680.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 6 )
custom_colors/selection_color = Color( 0, 0.423529, 0.0196078, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
max_length = 50
secret = true
context_menu_enabled = false

[node name="login_button" type="Button" parent="login_container"]
margin_left = 60.0
margin_top = 355.0
margin_right = 619.0
margin_bottom = 455.0
focus_mode = 0
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Login to account"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="account_buttons_container/acc_register_button" to="." method="_on_acc_register_button_pressed"]
[connection signal="pressed" from="account_buttons_container/acc_login_button" to="." method="_on_acc_login_button_pressed"]
[connection signal="pressed" from="register_container/register_button" to="." method="_on_register_button_pressed"]
[connection signal="pressed" from="login_container/login_button" to="." method="_on_login_button_pressed"]
