[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/Fonts/Ubuntu-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Scripts/Account.gd" type="Script" id=2]
[ext_resource path="res://assets/Themes/button_normal.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/Themes/button_pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/Fonts/button_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/Fonts/lineedit_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/Fonts/label_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/Themes/lineedit_normal.tres" type="StyleBox" id=8]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.027451, 0.254902, 0.219608, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = SubResource( 2 )
region_rect = Rect2( 0, 0, 2048, 1 )

[sub_resource type="DynamicFont" id=4]
size = 90
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=6]
size = 60
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 70
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 70
use_filter = true
font_data = ExtResource( 1 )

[node name="Account" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -760.0
margin_right = 360.0
margin_bottom = 760.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="account_bg" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -760.0
margin_right = 360.0
margin_bottom = 760.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="account_buttons_container" type="VBoxContainer" parent="."]
margin_left = 193.0
margin_top = 590.0
margin_right = 527.0
margin_bottom = 930.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acc_register_button" type="Button" parent="account_buttons_container"]
margin_right = 334.0
margin_bottom = 111.0
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_hover = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Register"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo_label" type="Label" parent="account_buttons_container"]
margin_top = 119.0
margin_right = 334.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0.784314, 0.341176, 1 )
text = "or"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acc_login_button" type="Button" parent="account_buttons_container"]
margin_left = 53.0
margin_top = 229.0
margin_right = 280.0
margin_bottom = 340.0
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_hover = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="register_container" type="VBoxContainer" parent="."]
visible = false
margin_top = 310.0
margin_right = 720.0
margin_bottom = 1209.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="register_error_label" type="Label" parent="register_container"]
margin_right = 720.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1
autowrap = true
max_lines_visible = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="register_username_label" type="Label" parent="register_container"]
margin_top = 91.0
margin_right = 280.0
margin_bottom = 159.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0.784314, 0.341176, 1 )
text = "Username"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="register_username" type="LineEdit" parent="register_container"]
margin_top = 199.0
margin_right = 720.0
margin_bottom = 287.0
custom_styles/read_only = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 6 )
custom_colors/selection_color = Color( 0, 0.423529, 0.0196078, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
max_length = 60
context_menu_enabled = false

[node name="register_email_label" type="Label" parent="register_container"]
margin_top = 327.0
margin_right = 154.0
margin_bottom = 395.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0.784314, 0.341176, 1 )
text = "Email"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="register_email" type="LineEdit" parent="register_container"]
margin_top = 435.0
margin_right = 720.0
margin_bottom = 523.0
custom_styles/read_only = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 6 )
custom_colors/selection_color = Color( 0, 0.423529, 0.0196078, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
max_length = 60
context_menu_enabled = false

[node name="register_password_label" type="Label" parent="register_container"]
margin_top = 563.0
margin_right = 266.0
margin_bottom = 631.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0.784314, 0.341176, 1 )
text = "Password"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="register_password" type="LineEdit" parent="register_container"]
margin_top = 671.0
margin_right = 720.0
margin_bottom = 759.0
custom_styles/read_only = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 6 )
custom_colors/selection_color = Color( 0, 0.423529, 0.0196078, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
max_length = 50
secret = true
context_menu_enabled = false

[node name="register_button" type="Button" parent="register_container"]
margin_left = 104.0
margin_top = 799.0
margin_right = 615.0
margin_bottom = 899.0
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_hover = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Create account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="login_container" type="VBoxContainer" parent="."]
visible = false
margin_top = 403.0
margin_right = 720.0
margin_bottom = 1116.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="login_error_label" type="Label" parent="login_container"]
margin_right = 720.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1
autowrap = true
max_lines_visible = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="login_email_label" type="Label" parent="login_container"]
margin_top = 101.0
margin_right = 154.0
margin_bottom = 169.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0.784314, 0.341176, 1 )
text = "Email"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="login_email" type="LineEdit" parent="login_container"]
margin_top = 219.0
margin_right = 720.0
margin_bottom = 307.0
custom_styles/read_only = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 6 )
custom_colors/selection_color = Color( 0, 0.423529, 0.0196078, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
max_length = 60
context_menu_enabled = false

[node name="login_password_label" type="Label" parent="login_container"]
margin_top = 357.0
margin_right = 266.0
margin_bottom = 425.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0.784314, 0.341176, 1 )
text = "Password"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="login_password" type="LineEdit" parent="login_container"]
margin_top = 475.0
margin_right = 720.0
margin_bottom = 563.0
custom_styles/read_only = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 6 )
custom_colors/selection_color = Color( 0, 0.423529, 0.0196078, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
max_length = 50
secret = true
context_menu_enabled = false

[node name="login_button" type="Button" parent="login_container"]
margin_left = 80.0
margin_top = 613.0
margin_right = 639.0
margin_bottom = 713.0
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_hover = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Login to account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="verification_container" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -363.5
margin_top = -249.5
margin_right = 363.5
margin_bottom = 249.5
custom_constants/separation = 60
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="verification_error_label" type="Label" parent="verification_container"]
margin_right = 727.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1
autowrap = true
max_lines_visible = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="verification_code_label" type="Label" parent="verification_container"]
margin_left = 85.0
margin_top = 111.0
margin_right = 641.0
margin_bottom = 191.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0.784314, 0.341176, 1 )
text = "Verification code"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="verification_code" type="LineEdit" parent="verification_container"]
margin_left = 185.0
margin_top = 251.0
margin_right = 541.0
margin_bottom = 339.0
custom_styles/read_only = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 6 )
custom_colors/selection_color = Color( 0, 0.423529, 0.0196078, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
max_length = 6
context_menu_enabled = false

[node name="verification_button" type="Button" parent="verification_container"]
margin_left = 118.0
margin_top = 399.0
margin_right = 609.0
margin_bottom = 499.0
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_hover = Color( 0.67451, 1, 0.870588, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Verify account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tween" type="Tween" parent="."]

[connection signal="pressed" from="account_buttons_container/acc_register_button" to="." method="_on_acc_register_button_pressed"]
[connection signal="pressed" from="account_buttons_container/acc_login_button" to="." method="_on_acc_login_button_pressed"]
[connection signal="text_changed" from="register_container/register_username" to="." method="_on_register_username_text_changed"]
[connection signal="text_changed" from="register_container/register_email" to="." method="_on_register_email_text_changed"]
[connection signal="text_changed" from="register_container/register_password" to="." method="_on_register_password_text_changed"]
[connection signal="pressed" from="register_container/register_button" to="." method="_on_register_button_pressed"]
[connection signal="text_changed" from="login_container/login_email" to="." method="_on_login_email_text_changed"]
[connection signal="text_changed" from="login_container/login_password" to="." method="_on_login_password_text_changed"]
[connection signal="pressed" from="login_container/login_button" to="." method="_on_login_button_pressed"]
[connection signal="text_changed" from="verification_container/verification_code" to="." method="_on_verification_code_text_changed"]
[connection signal="pressed" from="verification_container/verification_button" to="." method="_on_verification_button_pressed"]
